# multi-agent-service

./: .env.development  .env.example  .gitignore  BOCHA_AI_CLIENT_OPTIMIZATION.md  CHINESE_KEYWORDS_USAGE.md  DEMO_README.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MULTI_AGENT_DEMO_README.md  MULTI_PROVIDER_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PATENTSVIEW_INTEGRATION_GUIDE.md  PATENTSVIEW_INTEGRATION_STATUS.md  PATENTSVIEW_INTEGRATION_SUMMARY.md  PATENT_DATA_PROCESSING_IMPLEMENTATION.md  PATENT_DEMO_FIX_SUMMARY.md  PATENT_DEMO_README.md  PATENT_VIEW_API_KEY_MIGRATION_SUMMARY.md  README.md  README_DEMO.md  REAL_ENVIRONMENT_TEST_README.md  advanced_human_google_patents.py  api_demo.py  check_syntax.py  check_template.py  chinese_keywords_config.json  comprehensive_demo.py  debug_file.py  demo.py  demo_google_patents_browser.py  docker-compose.dev.yml  docker-compose.windows.yml  docker-compose.yml  final_google_patents_demo.py  generate_detailed_patent_report.py  generate_test_data.py  google_patents_human_behavior.py  google_patents_scraper_approach.py  health_check.py  interactive_demo.py  (+55 more)
config/: example_agents.json  example_models.json  example_workflows.json  patent_agents.json  patent_workflows.json
docs/: API_REFERENCE.md  PATENT_MVP_USER_GUIDE.md  README.md  TROUBLESHOOTING_GUIDE.md  deployment_guide.md  operations_guide.md
nginx/: nginx.conf
prompt/: agents.md  prompt.md  promptv1.md  result.md  resultv1.md
scripts/: docker-healthcheck.sh  init-db.sql  run_patent_performance_tests.py  setup-windows.bat  start-development.bat  start-development.ps1  start-development.sh  start-patent-production.ps1  start-patent-production.sh  start-production.bat  start-production.ps1  start-production.sh  validate-environment.ps1  validate-environment.sh
src/multi_agent_service/: __init__.py  main.py  startup.py  startup_validator.py
test_data/: api_test_cases.json  patent_test_data.json  performance_test_data.json  query_scenarios.json
tests/: PATENT_INTEGRATION_TESTS_SUMMARY.md  __init__.py  conftest.py  test_agent_hot_reload_handler.py  test_agent_router.py  test_agents_api.py  test_agents_base.py  test_chat_api.py  test_config_api.py  test_config_manager.py  test_config_models.py  test_config_service.py  test_customer_support_agent.py  test_end_to_end_business_processes.py  test_error_handling.py  test_fastapi_error_handlers.py  test_fault_recovery_and_exception_handling.py  test_graph_builder.py  test_hierarchical_workflow.py  test_hot_reload_service.py  test_intent_analyzer.py  test_logging_system.py  test_main.py  test_model_clients.py  test_model_router.py  test_models.py  test_monitoring_api.py  test_monitoring_system.py  test_multi_agent_collaboration_integration.py  test_parallel_workflow.py  test_patent_analysis_agent.py  test_patent_api_integration.py  test_patent_coordinator_agent.py  test_patent_data_collection_agent.py  test_patent_data_processing.py  test_patent_end_to_end_integration.py  test_patent_models_clean.py  test_patent_models_comprehensive.py  test_patent_multi_agent_collaboration.py  test_patent_report_agent.py  (+11 more)
(+156 files in other folders)
